UseSharedSpaces error message is incomplete

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b120

      If there an error in mapping to the shared archive, the error message is being displayed as:
      UseSharedSpaces: Unable to map %s shared space at required address.

      The "%s" should be substituted with the name of a shared space region such as "ReadOnly".

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Calvin Cheung (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: