8154976: UseSharedSpaces error message is incomplete

Reviewed-by: cjplummer, jiangli, mseledtsov